test/files/pos/t3419/B_1.scala
trait T[A,B] {
  type X[a <: A, b <: B] <: B
}