test/files/neg/bug113.scala
object T {
  type A <: B;
  type B <: A;
}
